              output quickly.  Thanks "Nic Roets" <nroets@gmail.com>.

              bmptopnm: fix crash with 16 bit images.

              pamlcolor8.map: Make it a 256 color map sorted by index,
              per Palm's spec.  Thanks Paul Bolle <pebolle@tiscali.nl>.

              xwdtopnm: deal with too-large bits per pixel value in XWD 
              header.

              pnmcrop: fix -verbose message about background color with
              -white.

              libnetpbm: make all row free operations go through
              pm_freerow(); change row buffer type from char * to void *
              for pm_allocrow(), pm_freerow().

              Fix bug: ppmdraw.h, ppmdfont.h not installed.

              package, install: install interface header files as
              <netpbm/xxx.h> instead of just <xxx.h>.

07.09.26 BJH  Release 10.40.00

              pamfunc: Add -andmask, -ormask, -xormask, -not,
              -shiftleft, -shiftright.

              pbmtonokia: fail if input is > 255 x 255.  Thanks Paul Bolle
              <pebolle@tiscali.nl>.

              pnmmargin: add -plain option.    Thanks
              Prophet of the Way <afu@wta.att.ne.jp>.

              pnmgamma: improve error messages.

              pamstack: accept Standard Input properly.

              pnmmargin: recognize invalid options better.  Thanks
              Prophet of the Way <afu@wta.att.ne.jp>.

              anytopnm, pnmmargin, pamstretch-gen, ppmquantall: fix
              small temporary file security exposure.

              pnmtopalm: fix typo in error message.  Thanks Paul Bolle
              <pebolle@tiscali.nl>.

              pnmtops: fix crash when program attempts to write 12 bits per
              sample Postscript.  It doesn't really know how to do that, so
              now it just writes 8 unless you do -psfilter.

              pnmtopng: Sort palette properly when alpha maxval != 255.
